[gd_scene load_steps=8 format=2]

[ext_resource path="res://2D Platformer/Player/powerup/Gun/bullet.gd" type="Script" id=1]
[ext_resource path="res://2D Platformer/Player/powerup/Gun/bullet.png" type="Texture" id=2]
[ext_resource path="res://2D Platformer/Player/powerup/Gun/bulletSplode2.png" type="Texture" id=3]
[ext_resource path="res://2D Platformer/Player/powerup/Gun/bulletSplode3.png" type="Texture" id=4]
[ext_resource path="res://2D Platformer/Player/powerup/Gun/bulletSplode1.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), null ],
"loop": false,
"name": "Explode",
"speed": 20.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Bullet",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.50122, 5.30782 )

[node name="bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="bulletSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Bullet"

[node name="bulletCollision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
